K8s/manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-web
  labels:
    app: go-web
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
  selector:
     app: go-web
  type: ClusterIP
